# WaveNet

./: .gitignore  Makefile  README.md  ngircd.config  rfc.md  rfc_wavenet.txt
DispositivoWaveNET/: .gitignore  c1_comunication.py  c1_listen.py  c1_send.py  c1_shared.py  capa1.py  dispositivo_wavenet.py  new_prueba.txt  prueba.txt  pyproject.toml
DispositivoWaveNET/dispositivo_wavenet/: .gitignore  c1_communication.py  c1_comunication.py  c1_shared.py  dispositivo_wavenet.py  prueba.txt  str
DispositivoWaveNET/dispositivo_wavenet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
DispositivoWaveNET/tests/: 1q  listen.py  send.py  test_1.py
WaveNetAplicacion/: FileClient.py  Protocol.py  Service.py  pyproject.toml
WaveNetAplicacion/test/: test_filehub.py  test_fileregister.py  test_node_manager.py  test_protocol.py  test_services.py
WaveNetAplicacion/wavenetaplicacion/: FileClient.py  FileHub.py  FileServiceDaemon.py  GeneralParser.py  NodeManager.py  Protocol.py  Service.py  irc_bot.py  main_meshhub.py
WaveNetCore/: .WaveNetMesh.py.swp  WaveNetAdaptors.py  WaveNetCommunication.py  WaveNetCrypto.py  WaveNetMesh.py  WaveNetNode.py  WaveNetPacketeering.py  WaveNetProtocols.py  pyproject.toml
WaveNetCore/tests/: test_adaptors.py  test_adaptors_no_encrypt.py  test_crypto.py  test_mesh.py  test_node.py  test_packeteering.py  test_protocols.py  test_sound_hub.py  test_sound_node.py  test_sound_protocol.py  test_sound_protocol_listen.py  test_sound_protocol_send.py
WaveNetCore/wavenetcore.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+17 files in other folders)
