[project]
name = "wavenetcore"
version = "0.1.0"
description = "A core mesh network library"
authors = [{ name = "Maximilian Latysh" }]
dependencies = ["cryptography", "pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
